# DirectX12_Lessons

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DX12 Lessons.sln  DX12 Lessons.vcxproj  readme.md
cmake/: hlsl_compiler.cmake  msvc_settings.cmake  vcpkg.cmake
src/: CMakeLists.txt  d3dx12.h  lesson1.cpp
src/L1.Basic_Window/: CMakeLists.txt  L1.Basic_Window.vcxproj  directx12.cpp  directx12.h  main.cpp  window.h
src/L2.Draw_Cube/: CMakeLists.txt  L2.Draw_Cube.vcxproj  L2.Draw_Cube.vcxproj.filters  cmd_queue.cpp  cmd_queue.h  directx12.cpp  directx12.h  draw_cube.cpp  draw_cube.h  dx_wrapped_types.h  gpu_resource.cpp  gpu_resource.h  main.cpp  pixel_shader.hlsl  vertex_shader.hlsl
src/common/: CMakeLists.txt  clock.cpp  clock.h  common.vcxitems  window.cpp  window.h  window_implementation.inl
